# itmo-hws-opengl

./: README.md  main.cpp
assets/light/: VS.glsl
assets/skybox/: FS.glsl
assets/water/: FS.glsl  VS.glsl
assets/water_old/: FS.glsl  VS.glsl
landshaft/: CMakeLists.txt  README.md
landshaft/assets/gui/: FS.glsl  VS.glsl
landshaft/assets/hmap/: FS.glsl  VS.glsl
landshaft/assets/light/: FS.glsl
landshaft/assets/model/: FS.glsl  VS.glsl
landshaft/assets/skybox/: VS.glsl
landshaft/assets/water/: VS.glsl
landshaft/models/: model.h
landshaft/project/camera/: camera.h
landshaft/project/framebuffer/: frame_buffer.cpp  frame_buffer.h
landshaft/project/gui/: gui_handler.cpp
landshaft/project/light/: light.h
landshaft/project/models/: scene_object.cpp  scene_object.h
landshaft/project/shaders/: opengl_shader.cpp  opengl_shader.h
landshaft/project/textures/: texture.h
landshaft/project/world/: landschaft.cpp  landschaft.h  skybox.h  water.h  water_fb.cpp
mandelbrot_fractal/: CMakeLists.txt  README.md  main.cpp  opengl_shader.cpp  opengl_shader.h
mandelbrot_fractal/assets/: fractal_FS.glsl
model_just_colors/: CMakeLists.txt  README.md  main.cpp  opengl_shader.h
model_just_colors/assets/: reflect_FS.glsl  reflect_VS.glsl
model_just_colors/project/: mesh.cpp  mesh.h  model.cpp  model.h  skybox.h  texture.h
model_refr_refl/: CMakeLists.txt  README.md  conanfile.txt  main.cpp  opengl_shader.cpp
model_refr_refl/assets/: reflect_FS.glsl  skybox_FS.glsl  skybox_VS.glsl
model_refr_refl/project/: center_camera.h  mesh.cpp  texture.cpp
models/: mesh.cpp
project/gui/: gui_handler.h
project/models/: mesh.h
project/textures/: texture.cpp
project/world/: water.cpp  water_fb.h
